Add VR corrections

--- a/source/bibliography/bib/Berretta_2013.bib
+++ b/source/bibliography/bib/Berretta_2013.bib
@@ -1,4 +1,4 @@
-@incollection{F__2013,
+@incollection{Berretta_2013,
  author = {Berretta, Facundo Marcelo and Ferrelli, Maria Leticia and Salvador, Ricardo and Sciocco-Cap, Alicia and Romanowski, Victor},
  title = {Baculovirus Gene Expression},
  publisher = {{InTech}},
