--- a/source/bibliography/bib/Ferrelli_2012.bib
+++ b/source/bibliography/bib/Ferrelli_2012.bib
@@ -1,5 +1,5 @@
 @article{Ferrelli_2012,
- author = {Ferrelli, Mar{\'{\i}}a and Salvador, Ricardo and Biedma, Marina and Berretta, Marcelo and Haase, Santiago and Sciocco-Cap, Alicia and Ghiringhelli, Pablo and Romanowski, V{\'{\i}}ctor},
+ author = {Ferrelli, M. Leticia and Salvador, Ricardo and Biedma, Marina and Berretta, Marcelo and Haase, Santiago and Sciocco-Cap, Alicia and Ghiringhelli, Pablo and Romanowski, Victor},
  title = {Genome of Epinotia aporema granulovirus ({EpapGV}), a polyorganotropic fast killing betabaculovirus with a novel thymidylate kinase gene},
  journal = {{BMC} Genomics},
  publisher = {Springer Science and Business Media {LLC}},
