--- a/source/bibliography/bib/Ferrelli_2018.bib
+++ b/source/bibliography/bib/Ferrelli_2018.bib
@@ -1,5 +1,5 @@
 @article{Ferrelli_2018,
- author = {Ferrelli, Mar{\'{\i}}a Leticia and Pidre, Mat{\'{\i}}as Luis and Ghiringhelli, Pablo Daniel and Torres, Sof{\'{\i}}a and Fabre, Mar{\'{\i}}a Laura and Masson, Tom{\'{a}}s and C{\'{e}}dola, Maia Tatiana and Sciocco-Cap, Alicia and Romanowski, V{\'{\i}}ctor},
+ author = {Ferrelli, Maria Leticia and Pidre, Matias Luis and Ghiringhelli, Pablo Daniel and Torres, Sofia and Fabre, Maria Laura and Masson, Tomas and Cedola, Maia Tatiana and Sciocco-Cap, Alicia and Romanowski, Victor},
  title = {Genomic analysis of an Argentinean isolate of Spodoptera frugiperda granulovirus reveals that various baculoviruses code for Lef-7 proteins with three F-box domains},
  journal = {{PLOS} {ONE}},
  publisher = {Public Library of Science ({PLoS})},
