--- a/source/references.bib
+++ b/source/references.bib
@@ -798,7 +798,7 @@
 }
 
 @article{Ferrelli_2012,
- author = {Ferrelli, Mar{\'{\i}}a and Salvador, Ricardo and Biedma, Marina and Berretta, Marcelo and Haase, Santiago and Sciocco-Cap, Alicia and Ghiringhelli, Pablo and Romanowski, V{\'{\i}}ctor},
+ author = {Ferrelli, M. Leticia and Salvador, Ricardo and Biedma, Marina and Berretta, Marcelo and Haase, Santiago and Sciocco-Cap, Alicia and Ghiringhelli, Pablo and Romanowski, Victor},
  title = {Genome of Epinotia aporema granulovirus ({EpapGV}), a polyorganotropic fast killing betabaculovirus with a novel thymidylate kinase gene},
  journal = {{BMC} Genomics},
  publisher = {Springer Science and Business Media {LLC}},
@@ -822,7 +822,7 @@
 }
 
 @article{Ferrelli_2018,
- author = {Ferrelli, Mar{\'{\i}}a Leticia and Pidre, Mat{\'{\i}}as Luis and Ghiringhelli, Pablo Daniel and Torres, Sof{\'{\i}}a and Fabre, Mar{\'{\i}}a Laura and Masson, Tom{\'{a}}s and C{\'{e}}dola, Maia Tatiana and Sciocco-Cap, Alicia and Romanowski, V{\'{\i}}ctor},
+ author = {Ferrelli, Maria Leticia and Pidre, Matias Luis and Ghiringhelli, Pablo Daniel and Torres, Sofia and Fabre, Maria Laura and Masson, Tomas and Cedola, Maia Tatiana and Sciocco-Cap, Alicia and Romanowski, Victor},
  title = {Genomic analysis of an Argentinean isolate of Spodoptera frugiperda granulovirus reveals that various baculoviruses code for Lef-7 proteins with three F-box domains},
  journal = {{PLOS} {ONE}},
  publisher = {Public Library of Science ({PLoS})},
@@ -1065,8 +1065,8 @@
 @article{Harrison_2017,
  author = {Harrison, Robert L. and Rowley, Daniel L. and Mowery, Joseph and Bauchan, Gary R. and Theilmann, David A. and Rohrmann, George F. and Erlandson, Martin A.},
  title = {The Complete Genome Sequence of a Second Distinct Betabaculovirus from the True Armyworm, Mythimna unipuncta},
- journal = {PLOS ONE},
- publisher = {Public Library of Science (PLoS)},
+ journal = {{PLOS} {ONE}},
+ publisher = {Public Library of Science ({PLoS})},
  year = {2017},
  month = {jan},
  number = {1},
