Add final corrections

--- a/source/preamble.tex
+++ b/source/preamble.tex
@@ -1,4 +1,3 @@
-
 \usepackage{setspace}
 \doublespacing
 
@@ -9,7 +8,7 @@
 \usepackage[spanish]{babel}
 
 % Change Cuadro -> Tabla for tables
-\renewcommand\spanishtablename{Tabla} 
+%\renewcommand\spanishtablename{Tabla} 
 
 \doublespacing
 
