--- a/source/references.bib
+++ b/source/references.bib
@@ -289,6 +289,7 @@
  author = {Biedma, Marina Elizabeth},
  title = {Desarrollo de un sistema de recombinaci{\'{o}}n para su aplicaci{\'{o}}n al estudio de determinantes gen{\'{e}}ticos que afectan la infectividad de baculovirus de inter{\'{e}}s agron{\'{o}}mico},
  publisher = {Universidad Nacional de La Plata},
+ year = {2009},
  url = {https://doi.org/10.35537%2F10915%2F90015},
  doi = {10.35537/10915/90015}
 }
@@ -1022,6 +1023,7 @@
  author = {Haase, Santiago},
  title = {Desarrollo de herramientas moleculares para incrementar la aplicabilidad del baculovirus de Anticarsia gemmatalis en el control biol{\'{o}}gico de plagas},
  publisher = {Universidad Nacional de La Plata},
+ year = {2015},
  url = {https://doi.org/10.35537%2F10915%2F48298},
  doi = {10.35537/10915/48298}
 }
