--- a/source/bibliography/bib/Haase_2015_tesis.bib
+++ b/source/bibliography/bib/Haase_2015_tesis.bib
@@ -2,6 +2,7 @@
  author = {Haase, Santiago},
  title = {Desarrollo de herramientas moleculares para incrementar la aplicabilidad del baculovirus de Anticarsia gemmatalis en el control biol{\'{o}}gico de plagas},
  publisher = {Universidad Nacional de La Plata},
+ year = {2015},
  url = {https://doi.org/10.35537%2F10915%2F48298},
  doi = {10.35537/10915/48298}
 }
