--- a/source/bibliography/bib/Mart_nez_2004.bib
+++ b/source/bibliography/bib/Mart_nez_2004.bib
@@ -1,5 +1,5 @@
 @article{Mart_nez_2004,
- author = {Mart{\'{\i}}nez, Ana-Mabel and Caballero, Primitivo and Villanueva, Maider and Miralles, Nagore and Mart{\'{\i}}n, Ivan San and L{\'{o}}pez, Est{\'{\i}}baliz and Williams, Trevor},
+ author = {Martínez, Ana-Mabel and Caballero, Primitivo and Villanueva, Maider and Miralles, Nagore and Mart{\'{\i}}n, Ivan San and L{\'{o}}pez, Est{\'{\i}}baliz and Williams, Trevor},
  title = {Formulation with an Optical Brightener Does Not Increase Probability of Developing Resistance to Spodoptera frugiperda Nucleopolyhedrovirus in the Laboratory},
  journal = {Journal of Economic Entomology},
  publisher = {Oxford University Press ({OUP})},
