--- a/source/bibliography/bib/Shi_2017.bib
+++ b/source/bibliography/bib/Shi_2017.bib
@@ -1,6 +1,6 @@
 @article{Shi_2017,
  author = {Shi, Anqi and Hu, Zhaoyang and Zuo, Yachao and Wang, Yan and Wu, Wenbi and Yuan, Meijin and Yang, Kai},
- title = {Autographa californica Nucleopolyhedrovirusac75is Required for the Nuclear Egress of Nucleocapsids and Intranuclear Microvesicle Formation},
+ title = {Autographa californica Nucleopolyhedrovirus ac75 is Required for the Nuclear Egress of Nucleocapsids and Intranuclear Microvesicle Formation},
  journal = {Journal of Virology},
  publisher = {American Society for Microbiology},
  year = {2017},
