--- a/source/bibliography/bib/Simo_n_2004.bib
+++ b/source/bibliography/bib/Simo_n_2004.bib
@@ -1,5 +1,5 @@
 @article{Simo_n_2004,
- author = {Simo{\'}n, Oihane and Williams, Trevor and Lo{\'}pez-Ferber, Miguel and Caballero, Primitivo},
+ author = {Simón, Oihane and Williams, Trevor and Lopez-Ferber, Miguel and Caballero, Primitivo},
  title = {Genetic Structure of a Spodoptera frugiperda Nucleopolyhedrovirus Population: High Prevalence of Deletion Genotypes},
  journal = {Applied and Environmental Microbiology},
  publisher = {American Society for Microbiology},
