--- a/source/references.bib
+++ b/source/references.bib
@@ -784,6 +784,14 @@
  editor = {Ehtesham, Hasnain Seyed}
 }
 
+@phdthesis{Fabre_2020_tesis,
+ author = {Fabre, Maria Laura},
+ title = {Mejoramiento de baculovirus como agentes de control biológico mediante la incorporación de proteínas heterólogas en los cuerpos de oclusión y como vectores en salud},
+ publisher = {Universidad Nacional de La Plata},
+ url = {https://doi.org/10.35537%2F10915%2F110908},
+ doi = {10.35537/10915/110908}
+}
+
 @article{Fernandez_Escamilla_2004,
  author = {Fernandez-Escamilla, Ana-Maria and Rousseau, Frederic and Schymkowitz, Joost and Serrano, Luis},
  title = {Prediction of sequence-dependent and mutational effects on the aggregation of peptides and proteins},
@@ -1021,7 +1029,7 @@
 
 @phdthesis{Haase_2015_tesis,
  author = {Haase, Santiago},
- title = {Desarrollo de herramientas moleculares para incrementar la aplicabilidad del baculovirus de Anticarsia gemmatalis en el control biol{\'{o}}gico de plagas},
+ title = {Desarrollo de herramientas moleculares para incrementar la aplicabilidad del baculovirus de Anticarsia gemmatalis en el control biológico de plagas},
  publisher = {Universidad Nacional de La Plata},
  year = {2015},
  url = {https://doi.org/10.35537%2F10915%2F48298},
@@ -1830,7 +1838,7 @@ Spodoptera frugiperda
 }
 
 @article{Mart_nez_2004,
- author = {Mart{\'{\i}}nez, Ana-Mabel and Caballero, Primitivo and Villanueva, Maider and Miralles, Nagore and Mart{\'{\i}}n, Ivan San and L{\'{o}}pez, Est{\'{\i}}baliz and Williams, Trevor},
+ author = {Martínez, Ana-Mabel and Caballero, Primitivo and Villanueva, Maider and Miralles, Nagore and Mart{\'{\i}}n, Ivan San and L{\'{o}}pez, Est{\'{\i}}baliz and Williams, Trevor},
  title = {Formulation with an Optical Brightener Does Not Increase Probability of Developing Resistance to Spodoptera frugiperda Nucleopolyhedrovirus in the Laboratory},
  journal = {Journal of Economic Entomology},
  publisher = {Oxford University Press ({OUP})},
@@ -2419,7 +2427,7 @@ Spodoptera frugiperda
 
 @article{Shi_2017,
  author = {Shi, Anqi and Hu, Zhaoyang and Zuo, Yachao and Wang, Yan and Wu, Wenbi and Yuan, Meijin and Yang, Kai},
- title = {Autographa californica Nucleopolyhedrovirusac75is Required for the Nuclear Egress of Nucleocapsids and Intranuclear Microvesicle Formation},
+ title = {Autographa californica Nucleopolyhedrovirus ac75 is Required for the Nuclear Egress of Nucleocapsids and Intranuclear Microvesicle Formation},
  journal = {Journal of Virology},
  publisher = {American Society for Microbiology},
  year = {2017},
@@ -2486,7 +2494,7 @@ Spodoptera frugiperda
 }
 
 @article{Simo_n_2004,
- author = {Simoń, Oihane and Williams, Trevor and Loṕez-Ferber, Miguel and Caballero, Primitivo},
+ author = {Simón, Oihane and Williams, Trevor and Lopez-Ferber, Miguel and Caballero, Primitivo},
  title = {Genetic Structure of a Spodoptera frugiperda Nucleopolyhedrovirus Population: High Prevalence of Deletion Genotypes},
  journal = {Applied and Environmental Microbiology},
  publisher = {American Society for Microbiology},
